--- a/seminaire_Tanakalab.tex
+++ b/seminaire_Tanakalab.tex
@@ -261,7 +261,7 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 	]
 	\addplot[Accent1, only marks, mark=*] table{freqsweep_Y265_cas4_GDL1.txt};
 	\addplot[Accent2, only marks, mark=o] table[y=LossModulus]{freqsweep_Y265_cas4_GDL1.txt};
-	\addplot[Main, no marks]{300*x^0.15}  node[midway, below right] {$G^\prime,G^{\prime\prime}\sim f^{0.15}$};
+	\addplot[Main, no marks]{300*x^0.15}  node[midway, below right] {$G^\prime\sim G^{\prime\prime}\sim f^{0.15}$};
 %	\addplot+[only marks, mark=*, forget plot] table{freqsweep_Y265_cas4_GDL1.txt} node[anchor=base east] {1\%};
 %	\addplot+[only marks, mark=o, forget plot] table[y=LossModulus]{freqsweep_Y265_cas4_GDL1.txt} node[anchor=base east] {1\%};
 %	\addplot{590*x^0.14};
@@ -501,7 +501,7 @@ Classically explained by disinclination dynamics in crystals
 \end{frame}
 \tikzset{external/force remake=false}
 
-\tikzset{external/force remake}
+%\tikzset{external/force remake}
 \begin{frame}{Primary creep}
 \begin{block}{Local insight from \movie[externalviewer]{ultrasounds}{Yaourt110_primary.avi}}
 \begin{itemize}
@@ -518,6 +518,7 @@ Classically explained by disinclination dynamics in crystals
 	xlabel={time (\si{\second})},
 	ylabel={strain $\gamma$},
 	xmin=-1e3, xmax=2.8e4,
+	axis background/.style={fill=white},
 	]
 	\addplot[black, no marks] table {Y261_oscil_creep_recovery_100Pa_decimated.txt};
 	\begin{scope}[<-,Main, inner sep=0]
@@ -530,7 +531,58 @@ Classically explained by disinclination dynamics in crystals
 \end{block}
 
 $\Rightarrow$ Primary creep is ``kinetically'' reversible (no detectable structure damage, but viscous dissipation)
+\end{frame}
+\tikzset{external/force remake=false}
 
+
+
+
+\tikzset{external/force remake}
+\begin{frame}{Dimensionless creep response}
+\begin{columns}
+\column{0.55\textwidth}
+\begin{tikzpicture}
+\begin{loglogaxis}[
+	width=\textwidth,
+	height=0.8\textwidth,
+	xmin=1e-5, xmax=2, xlabel={$t/\tau_f$},
+	ylabel={$\dot{\gamma}/\dot{\gamma}_\text{min}$},
+	cycle list name=earthy,
+	no marks,
+	]
+	\addplot table[x index=1, y index=3]{Y27_200Pa_gdot_decimated.txt} node (s200){};
+	\addplot table[x index=1, y index=3]{Y38_300Pa_gdot_decimated.txt} node (s300){};
+	\addplot table[x index=1, y index=3]{Y25_400Pa_gdot_decimated.txt}  node (s400){};
+	\addplot table[x index=1, y index=3]{Y32_550Pa_gdot_decimated.txt}  node (s550){};
+	\addplot table[x index=1, y index=3]{Y39_1000Pa_gdot_decimated.txt} node (s1000){};
+	\addplot[Accent2, ultra thick, domain={1e-4:0.1}] {0.2*x^(-0.85)} node[pos=0.75, below left] {$\frac{\dot{\gamma}}{\dot{\gamma}_\text{min}}\sim \left(\frac{t}{\tau_f}\right)^{-0.85}$};
+\end{loglogaxis}
+\end{tikzpicture}
+
+Linear viscoelasticity accounts for the Andrade exponent
+
+\column{0.45\textwidth}
+\begin{tikzpicture}
+\begin{loglogaxis}[
+	height=0.8\textwidth,
+	width=\textwidth,
+	xlabel={Frequency (\si{\hertz})}, ylabel={\textcolor{Accent1}{$G^\prime$}, \textcolor{Accent2}{$G^{\prime\prime}$}(\si{\pascal})},
+	domain={6e-2:70},
+	ymin=10,
+	]
+	\addplot[Accent1, only marks, mark=*] table{freqsweep_Y265_cas4_GDL1.txt};
+	\addplot[Accent2, only marks, mark=o] table[y=LossModulus]{freqsweep_Y265_cas4_GDL1.txt};
+	\addplot[Main, no marks]{100*x^0.15}  node[midway, below=1em] {$G^\prime\sim G^{\prime\prime}\sim f^{0.15}$};
+	
+\end{loglogaxis}
+\end{tikzpicture}
+\textcolor{Main}{
+\begin{align*}
+\Rightarrow & J(t) \equiv& \frac{\gamma(t)}{\sigma}\sim& t^{0.15}\\
+\Rightarrow & \dot{\gamma}(t)\sim& t^{0.15-1} =& t^{-0.85}
+\end{align*}
+}
+\end{columns}
 \end{frame}
 \tikzset{external/force remake=false}
 
