--- a/seminaire_Tanakalab.tex
+++ b/seminaire_Tanakalab.tex
@@ -292,6 +292,9 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 \section*{Creep and yielding}
 
 \begin{frame}{Creep and yielding}
+Just accepted in PRL, \textit{ArXiv 1401.8234}
+
+\bigskip
 \structure{Merciless yoghurt breakers}
 
 \bigskip
@@ -304,8 +307,11 @@ PhD student & CNRS researcher & Professor\\
 E.N.S. Lyon &  CRPP Bordeaux & E.N.S. Lyon\\
 \end{tabu}
 
+
 \bigskip
-Just accepted in PRL, \textit{ArXiv 1401.8234}
+\begin{description}[Special thanks]
+\item[Special thanks] to Alan Parker (Firmenich) for prompting this study and providing casein \& GDL
+\end{description} 
 
 \end{frame}
 
@@ -701,6 +707,77 @@ Creep responses in linear scales
 \end{frame}
 \tikzset{external/force remake=false}
 
+\begin{frame}{What about theories and models?}
+\begin{columns}
+\column{0.35\textwidth}
+\begin{block}{Discrete dislocation dynamics (dense)}
+\textit{\footnotesize Miguel et al., PRL 2002}
+
+\hspace{1em}\includegraphics[width=\textwidth-2em]{Miguel_2002_img}
+
+\medskip
+\hspace{1em}\includegraphics[width=\textwidth-2em]{Miguel_2002_graph}
+
+predicts Andrade creep \alert{but} no fracture
+\end{block}
+\column{0.65\textwidth}
+\begin{columns}
+\column{0.5\textwidth+1em}
+\structure{Fibre bundle model~\#1}
+
+\textit{\footnotesize Jagla et al., PRE 2011}
+\begin{itemize}
+\item elastic fibres
+\item local yield strain
+\item local coupling
+\end{itemize}
+
+\hspace{1em}\includegraphics[width=\textwidth-1em]{Jagla_2011_gamma}
+\[\tau_f\sim\left(\sigma-\alert{\sigma_c}\right)^{-1.25}\]
+
+\column{0.5\textwidth-1em}
+\includegraphics[width=\textwidth]{Jagla_2011_3regimes}
+\end{columns}
+predicts Andrade creep and failure \alert{but} critical stress
+\end{columns}
+\end{frame}
+
+
+\begin{frame}{What about theories and models?}
+\structure{Fibre bundle model~\#2}
+
+elastic fibres + local yield strain + damage accumulation
+\begin{block}{\textit{\footnotesize Kun et al. J. Stat Mech 2006, PRL 2008}}
+\begin{columns}
+\column{0.7\textwidth}
+\begin{tikzpicture}[inner sep=0]
+\node(a){\includegraphics[height=5\baselineskip]{Kun_2006_basquin.png}};
+\node[fill=white,yshift=-0.5em] at (a) {$\tau_f \sim \sigma^{-\beta}$};
+\end{tikzpicture}\,
+\includegraphics[height=5\baselineskip]{Kun_2008_Basquin}\,
+\includegraphics[height=5\baselineskip]{asphalt}
+\column{0.3\textwidth}
+$\beta$ exponent of damage accumulation
+\[\dot{\gamma}\sim \left(\tau_f-t\right)^{-1/(1+\beta)}\]
+\end{columns}
+\end{block}
+
+\begin{columns}
+\column{0.65\textwidth}
+\begin{block}{\textit{\footnotesize Halász et al., PRE 2012}}
+\begin{tikzpicture}[inner sep=0, ultra thick, font=\footnotesize]
+\node (g) {\includegraphics[height=7\baselineskip]{Halasz_2012_Basquin}};
+\node[draw=green!50!black, below right=0 and \baselineskip of g.north east] (c) {\includegraphics[height=4\baselineskip]{Halasz_2012_crack}};
+\node[draw=red, above right=0 and 6\baselineskip of g.south east] (d) {\includegraphics[height=4\baselineskip]{Halasz_2012_disordered}};
+\draw[->,green!50!black] (c.west) -- ++(-2\baselineskip,0) node[above] {$\beta=5$} node[below right=0 of c.north east, text width=5\baselineskip]{single crack propagation};
+\draw[->, red] (d.south west) -- +(-5\baselineskip,0) --($(g.south east) +(0, \baselineskip)$) node[below=1em] {$\beta=1$} node[above left=0 of d.south west] {diffusive damage};
+\end{tikzpicture}
+\end{block}
+\column{0.35\textwidth}
+Predicts Basquin law \& fractures \alert{but} no Andrade creep \& too slow divergence
+\end{columns}
+\end{frame}
+
 \begin{frame}{Creep and yielding summary}
 \begin{itemize}
 \item failure involves a single time scale $\tau_f \sim \sigma^{-5.5}$ Basquin law
@@ -721,7 +798,7 @@ Creep responses in linear scales
 		xmin=1e-5, xmax=2, xlabel={$t/\tau_f$},
 		ylabel={$\dot{\gamma}/\dot{\gamma}_\text{min}$},
 		xmode=log,ymode=log,
-		ytick={1e-4, 1e-2, 1},
+		xtick={1e-4, 1e-2, 1},
 		]
 		\addplot table[x index=1, y index=3]{Y27_200Pa_gdot_decimated.txt};
 		\addplot table[x index=1, y index=3]{Y38_300Pa_gdot_decimated.txt};
@@ -746,7 +823,7 @@ Creep responses in linear scales
 		xmin=1e-5, xmax=2, xlabel={$(\tau_f-t)/\tau_f$},
 		x dir=reverse,
 		xmode=log,ymode=log,
-		ytick={1e-4, 1e-2, 1},
+		xtick={1e-4, 1e-2, 1},
 	]
 		\addplot table[x expr=1-\thisrowno{1}, y index=3]{Y27_200Pa_gdot_decimated.txt};
 		\addplot table[x expr=1-\thisrowno{1}, y index=3]{Y38_300Pa_gdot_decimated.txt};
@@ -756,6 +833,9 @@ Creep responses in linear scales
 		\addplot[yellow, ultra thick, samples at={1e-5,1e-4, 1e-3,1e-2,0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9, 0.99, 0.999, 0.9999, 0.99999}] {0.378*(1-x)^(-0.85) + 0.187/x};
 	\end{groupplot}
 \end{tikzpicture}
+\begin{itemize}
+\item a model soft solid well captured by fibre-bundle models
+\end{itemize}
 \end{frame}
 
 
