--- a/seminaire_Tanakalab.tex
+++ b/seminaire_Tanakalab.tex
@@ -112,6 +112,8 @@
 	\includegraphics[height=2\baselineskip]{logo_ens-lyon}
 	}
 
+\includeonly{}
+
 \begin{document}
 \tikzset{every mark/.append style={scale=0.8}}
 \pgfplotsset{every axis/.append style={footnotesize}}
@@ -295,6 +297,22 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 
 
 \section*{Wrinkling}
+
+\begin{frame}{Wrinkling of a confined porous layer}
+
+\bigskip
+\structure{Fluorescent yoghurt makers}
+
+\bigskip
+\begin{tabu}{X[c]X[c]c}
+\includegraphics[height=0.3\textheight,clip=true,trim=3cm 7cm  2cm 5cm]{Mathieu}&
+\includegraphics[height=0.3\textheight]{Thomas}&
+\includegraphics[height=0.3\textheight]{Seb}\\
+Mathieu Nespoulous & Thomas Gibaud & Sebastien Manneville\\
+Associate Professor & CNRS researcher & Professor\\
+Aix-Marseille Université & E.N.S. Lyon & E.N.S. Lyon\\
+\end{tabu}
+\end{frame}
 
 %\tikzset{external/force remake}
 \begin{frame}{Over-acidification: Faster but weaker}
