--- a/seminaire_Tanakalab.tex
+++ b/seminaire_Tanakalab.tex
@@ -405,8 +405,131 @@ Caseins regain some solubility at low pH.
 
 \begin{itemize}
 \item nesting patterns
+\item length scale becomes smaller
 \end{itemize}
 \end{frame}
+
+\begin{frame}{What is going on in the thickness?}
+\begin{columns}
+\column{0.4\textwidth}
+\begin{itemize}
+\item fluorescent casein
+\item confocal microscope
+\item[$\Rightarrow$] 3D concentration field
+\end{itemize}
+
+\begin{tikzpicture}
+\draw[ultra thick] (0,) -- +(0.786\textwidth,0) node[midway, above] {\SI{1}{\milli\metre}};
+\end{tikzpicture}
+\setlength{\tabcolsep}{1pt}
+\begin{tabular}{p{\columnwidth}l}
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t000.png}& \SI{15}{\minute}\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t011.png} & \SI{22}{\minute}\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t110.png} & \SI{1}{\hour}~26\onslide<2->{\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t116.png} & \SI{1}{\hour}~30\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t117.png} & \SI{1}{\hour}~31\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t123.png} & \SI{1}{\hour}~35\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t200.png} & \SI{2}{\hour}~25\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t221.png} & \SI{2}{\hour}~40\\}
+\end{tabular}
+
+\begin{itemize}
+\item synæresis and swelling
+\item<2-> cause buckling
+\end{itemize}
+\column{0.1\textwidth}
+
+\column{0.5\textwidth}
+\begin{tikzpicture}
+	\begin{groupplot}[%
+		group style={
+			group name=g, group size=1 by 3,
+			xticklabels at=edge bottom,
+			vertical sep=0,
+			},
+		xmin=0, xmax=170, xtick={0,30,...,150},
+		extra tick style={grid=major},%
+		extra x ticks = {21,68}, extra x tick labels={},%
+		scale only axis,
+		width=\textwidth-4em,
+		height=5\baselineskip,
+		ylabel absolute, every axis y label/.append style={anchor=base, yshift=-1em}
+		]
+	\nextgroupplot[
+		ylabel={$G^\prime$ (\si{\pascal})},
+		ymin=0,
+		]
+	\addplot+[no marks,Accent1] table[x expr={\thisrowno{0}/60}]{cas4_GDL4_Y271.prise};
+	
+	\nextgroupplot[
+		ylabel={Volume (\%)}, ymin=20, ymax=100, 
+		ytick={40,60,80,100}, every axis y label/.append style={xshift=0.5em},
+		]
+	\addplot+[no marks,Accent1] table[x expr={\thisrowno{0}+15}, y expr={\thisrowno{1}*100}]{relative_volume_excess_area_cloques.txt};
+	%\addplot+[only marks,Accent2, mark=+] table[y expr={\thisrowno{1}*100}]{volume_rel_half_cas8_toi.txt};
+	\node[anchor=south west] at (rel axis cs:0,0) {\rotatebox{90}{synæresis}};
+	\node at (axis cs:68,80) {swelling};
+	
+	\nextgroupplot[
+		ylabel={Excess area (\%)}, ymin=0, ymax=4, ytick={0,1,2,3},
+		xlabel={time (min)}, 
+		every axis y label/.append style={xshift=-1em},
+		]
+	\only<2->{\addplot+[no marks,Accent1] table[x expr={\thisrowno{0}+15}, y expr={\thisrowno{2}*100}]{relative_volume_excess_area_cloques.txt} node[pos=1, below left] {all};
+	\addplot+[no marks,Accent2] table[x expr={\thisrowno{0}+15}, y expr={\thisrowno{3}*100}]{relative_volume_excess_area_cloques.txt} node[pos=1, left] {single blister};
+	\draw[->] (axis cs: 21, 3) -- (axis cs: 68, 3) node[midway, below] {\SI{1}{\hour}};}
+	%\legend{all, single blister};
+	\end{groupplot}
+	\end{tikzpicture}
+\end{columns}
+\end{frame}
+
+\begin{frame}{Dynamics (confocal microscope)}
+\movie[externalviewer]{\begin{tikzpicture}
+	\node[inner sep=0] (a) {\includegraphics[width=\textwidth]{cas3p2_fluo0p8_GDL4_2_t260_crop_resized.jpg}};
+	\draw[line width=0.2em] ++(a.south west) -- ++(0.75\textwidth,0) node[pos=0, below right, inner xsep=0] {\SI{1}{\milli\metre}};
+	
+	\node[above=1em of a, inner sep=0] (c) {\includegraphics[width=0.4\textwidth]{cas3p2_fluo0p8_GDL4_50um_coating_2_transmission}};
+
+	\node[minimum width = 0.156\textwidth, minimum height=0.156\textwidth, anchor=north west, draw=Accent1] at ($(c.north west) + (0.125\textwidth,0)$) (dz) {};
+	\draw[ultra thick] (c.south east) ++(0,-0.25em) -- ++(-0.132\textwidth,0) node[pos=0.5, below=0.25em, font=\small] {\SI{1}{\milli\metre}};
+\end{tikzpicture}
+}{volume_plis.avi}
+\end{frame}
+
+\begin{frame}{Dynamics (confocal microscope)}
+\begin{tikzpicture}
+	\matrix[matrix of nodes, inner sep=0, column sep=0.015\textwidth, row sep=0.5em, ampersand replacement=\&] (m){
+	33 min \& 38 min \& 43 min \\
+	\includegraphics[width=0.32\textwidth]{cas3p2_fluo0p8_GDL4_2_t047_crop_resized.jpg}\&
+	\includegraphics[width=0.32\textwidth]{cas3p2_fluo0p8_GDL4_2_t056_crop_resized.jpg}\&
+	\includegraphics[width=0.32\textwidth]{cas3p2_fluo0p8_GDL4_2_t065_crop_resized.jpg}\\
+	48 min \& 1h \& 1h15 \\
+	\includegraphics[width=0.32\textwidth]{cas3p2_fluo0p8_GDL4_2_t074_crop_resized.jpg}\&
+	\includegraphics[width=0.32\textwidth]{cas3p2_fluo0p8_GDL4_2_t092_crop_resized.jpg}\&
+	\includegraphics[width=0.32\textwidth]{cas3p2_fluo0p8_GDL4_2_t125_crop_resized.jpg}\\
+	};
+	\draw[line width=0.2em] ++(m-4-1.south west) -- ++(0.24\textwidth,0) node[pos=0, below right, inner xsep=0] {\SI{1}{\milli\metre}};
+\end{tikzpicture}
+
+\begin{columns}
+\column{0.32\textwidth}
+\begin{itemize}
+\item confinement
+\item cascade buckling
+\item wavelength division
+\end{itemize}
+\column{0.68\textwidth}
+\includegraphics[width=\columnwidth]{Roman_1999_confined.jpg}
+
+\textit{\footnotesize Roman \& Pocheau, EPL (1999)}
+\end{columns}
+
+\begin{center}
+\alert{Where does the initial wavelength come from?}
+\end{center}
+\end{frame}
+
 
 \end{document}
 
