--- a/seminaire_Tanakalab.tex
+++ b/seminaire_Tanakalab.tex
@@ -349,7 +349,6 @@ Caseins regain some solubility at low pH.
 	
 	\structure{Side view of the cell}\\
 	\tikzsetnextfilename{cell_brushes}
-	\tikzset{external/force remake}
 	\begin{tikzpicture}[font=\footnotesize]
 		\fill[pattern=north east lines,pattern color=Accent2] (0,0) rectangle (\textwidth,1.5em) node[midway,fill=white,inner sep=1pt] {glass};
 		\fill[pattern=north east lines,pattern color=Accent2] (0,-2.5em) rectangle (\textwidth,-4em) node[midway,fill=white,inner sep=1pt] {glass};
@@ -592,6 +591,7 @@ Caseins regain some solubility at low pH.
 
 \column{0.5\textwidth}
 \begin{block}{Ruck in a rug}
+\tikzsetnextfilename{ruck}%
 \begin{tikzpicture}[ultra thick]
 \begin{axis}[
 	name=a,
@@ -705,6 +705,49 @@ $\lambda \sim \epsilon^{1/7} \lambda^*$ and $A \sim \epsilon^{4/7} \lambda^*$
 \end{frame}
 
 \againframe<3>{carpet}
+\tikzset{external/force remake}
+\begin{frame}{Cell thickness}
+\begin{tikzpicture}[mark size={0.3em}]
+	\matrix[matrix of nodes, inner sep=0, column sep=0.01\columnwidth, row sep=0.01\columnwidth, ampersand replacement=\&] (m) {
+		\includegraphics[width=0.245\columnwidth]{pattern_50um.jpg}\&
+		\includegraphics[width=0.245\columnwidth]{pattern_100um.jpg}\&
+		\includegraphics[width=0.245\columnwidth]{pattern_250um.jpg}\&
+		\includegraphics[width=0.245\columnwidth]{pattern_450um.jpg}\\
+	};
+	\node[inner sep=0, below left=0.01\columnwidth and 0 of m.south east] (x800) {\includegraphics[width=0.49\columnwidth]{pattern_800um_x1.jpg}};
+	\draw[ultra thick, Accent2, <->] (x800.south west) ++(0.196\columnwidth, 0.05\columnwidth) -- ++(0.145\columnwidth,0) node[midway,above]{$\lambda$};
+	\draw[line width=0.2em,Main](x800.north east) -- ++(-0.217\columnwidth,0) node[midway,below] {\SI{5}{\milli\metre}};
+	
+	\begin{axis}[%
+		name=g,
+		anchor=left of north west,
+		at={($(m.south west)+(0,-0.01\columnwidth)$)},
+		scale only axis,
+		width=0.5\textwidth-3em,
+		height=0.25\columnwidth-2em,
+		xmin=0,xmax=1,xlabel={$e$ (\si{\milli\metre})},
+		xtick={0,0.4,...,0.9},
+		ymin=0,ylabel={$\lambda$ (\si{\milli\metre})},
+		]
+		\addplot[no marks, domain=0:3] {4.23*x};
+		\begin{scope}[inner sep=0, minimum size=0.8em]
+			\node[circle, fill=Accent1] at (axis cs:0.05,0.261){};
+			\node[circle, fill=white, draw=Accent1] at (axis cs:0.1,0.458) {};
+			\node[regular polygon, regular polygon sides=3, fill=Accent1] at (axis cs:0.250,0.916){};
+			\node[regular polygon, regular polygon sides=3, fill=white, draw=Accent1] at (axis cs:0.450,2.075){};
+			\node[fill=Accent1] at (axis cs:0.800,3.333){};
+		\end{scope}
+	\end{axis}
+	\begin{scope}[inner sep=0, minimum size=0.8em, transform canvas={xshift=0.5em, yshift=-0.5em}]
+		\node[circle, fill=Accent1] at (m-1-1.north west) {};
+		\node[circle, fill=white, draw=Accent1] at (m-1-2.north west){};
+		\node[regular polygon, regular polygon sides=3, fill=Accent1] at (m-1-3.north west){};
+		\node[regular polygon, regular polygon sides=3, fill=white, draw=Accent1] at (m-1-4.north west) {};
+		\node[fill=Accent1] at (x800.north west) {};
+	\end{scope}
+\end{tikzpicture}
+\end{frame}
+\tikzset{external/force remake=false}
 
 \end{document}
 
