--- a/seminaire_Tanakalab.tex
+++ b/seminaire_Tanakalab.tex
@@ -705,7 +705,8 @@ $\lambda \sim \epsilon^{1/7} \lambda^*$ and $A \sim \epsilon^{4/7} \lambda^*$
 \end{frame}
 
 \againframe<3>{carpet}
-\tikzset{external/force remake}
+
+%\tikzset{external/force remake}
 \begin{frame}{Cell thickness}
 \begin{tikzpicture}[mark size={0.3em}]
 	\matrix[matrix of nodes, inner sep=0, column sep=0.01\columnwidth, row sep=0.01\columnwidth, ampersand replacement=\&] (m) {
@@ -747,7 +748,52 @@ $\lambda \sim \epsilon^{1/7} \lambda^*$ and $A \sim \epsilon^{4/7} \lambda^*$
 	\end{scope}
 \end{tikzpicture}
 \end{frame}
-\tikzset{external/force remake=false}
+%\tikzset{external/force remake=false}
+
+\tikzset{external/force remake}
+\begin{frame}{Surprising viscosity influence}
+\begin{columns}
+\column{0.5\textwidth}
+\[ \lambda^* \sim \left(\frac{B \ell_p^2}{\eta v h}\right)^\frac{1}{3}\]
+\begin{tikzpicture}
+	\begin{loglogaxis}[%
+		width=\textwidth,
+		height=0.8\textwidth,
+		xmin=0.6,xmax=11,xlabel={viscosity (\si{\milli\pascal\second})},
+		xtick={0.7, 1, 2, 5, 10}, xticklabels={$0.7$, $1$, $2$, $5$, $10$},
+		ytick={1,2,3,4}, yticklabels={$1$,$2$,$3$,$4$},
+		ymin=1, ymax=5, ylabel={$\lambda$ (\si{\milli\metre})},
+		mark size={0.3em},
+		legend style={legend pos=south east},
+		]
+		\addplot+[no marks, domain=0.7:10, black, forget plot] {1.7*x^0.4} node[midway, below] {$\eta^{0.4}$};
+		\addplot+[only marks,Accent1, mark=o] table{eta_lambda_eau_pure.txt};
+		\addplot+[only marks,Accent2, mark=square] table{eta_lambda_eau_glycerol.txt};
+		\legend{water, water-glycerol};
+	\end{loglogaxis}
+\end{tikzpicture}
+
+\column{0.5\textwidth}
+\begin{itemize}
+\item $\lambda$ increases with $\eta$
+\item Can be explained only by a hidden dependence of the viscosity on $B$, $\ell_p$, \ldots 
+\item[$\Rightarrow$] Viscosity influences gel formation.
+\end{itemize}
+%If $\ell_p \sim \eta^{-\alpha}$ and $B\sim \mathrm{k_B}T \left(\frac{h}{\ell}\right)^3$, then
+%\[ \lambda^* \sim \eta^\frac{\alpha-1}{3} \]
+%\[\alpha\simeq 2.2\]
+\end{columns}
+\end{frame}
+
+\begin{frame}{Viscosity of the solvent during gel formation}
+\begin{tabu}{X[c]X[c]}
+water $\eta=\SI{1}{\milli\pascal\second}$ &
+glycerol 60\% $\eta=\SI{10}{\milli\pascal\second}$\\
+\includegraphics[width=0.45\textwidth]{XYslice_gly0}&
+\includegraphics[width=0.45\textwidth]{XYslice_gly60}
+\end{tabu}
+\tikz\draw[line width=0.2em] (0,0) -- ++(0.045\textwidth,0) node[midway, below] {\SI{10}{\micro\metre}};
+\end{frame}
 
 \end{document}
 
