--- a/seminaire_Tanakalab.tex
+++ b/seminaire_Tanakalab.tex
@@ -787,12 +787,35 @@ $\lambda \sim \epsilon^{1/7} \lambda^*$ and $A \sim \epsilon^{4/7} \lambda^*$
 
 \begin{frame}{Viscosity of the solvent during gel formation}
 \begin{tabu}{X[c]X[c]}
-water $\eta=\SI{1}{\milli\pascal\second}$ &
-glycerol 60\% $\eta=\SI{10}{\milli\pascal\second}$\\
+water, $\eta=\SI{1}{\milli\pascal\second}$ &
+glycerol 60\%, $\eta=\SI{10}{\milli\pascal\second}$\\
 \includegraphics[width=0.45\textwidth]{XYslice_gly0}&
 \includegraphics[width=0.45\textwidth]{XYslice_gly60}
 \end{tabu}
 \tikz\draw[line width=0.2em] (0,0) -- ++(0.045\textwidth,0) node[midway, below] {\SI{10}{\micro\metre}};
+\end{frame}
+
+\begin{frame}{Conclusion}
+Spontaneous wrinkling of over-acidified casein gels in non-adhesive confinement
+	
+	\structure{Original patterns}
+	\begin{itemize}
+		\item nested (optical elements ?)
+		\item kinetic wavelength selection
+	\end{itemize}
+	\structure{A new wrinkling mechanism}
+	\begin{itemize}
+		\item porous flow resist bending
+		\item Darcy can beat Poiseuille
+		\item may extend to other porous sheets (wet paper, biological membranes\ldots)
+	\end{itemize}
+	\structure{Viscosity influences}
+	\begin{itemize}
+		\item porous dissipation
+		\item gel formation (theory?)
+		\raisebox{0.6\normalbaselineskip}[0pt][0pt]{$\left.\rule{0pt}{1.1\normalbaselineskip}\right\}$ thus wrinkling}
+	\end{itemize}
+	\structure{To do:} Measure everything to plot $\lambda_\text{theory}$ vs $\lambda_\text{experiment}$
 \end{frame}
 
 \end{document}
